# CMake_OpenGL_GLFW_Starter_Project

./: CMakeLists.txt
src/: config.h  glad.c  main.cpp  triangle.cpp  triangle.h
src/shaders/: fragment.txt
